--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 * {
 	margin: 0px;
@@ -86,5 +85,75 @@ nav a:last-child {
 .header__cart img:nth-child(2) {
 	position: absolute;
 	right: 35px;
+
+}
+
+.info {
+	background-image: url(./image/info-background.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.info__inner {
+	display: flex;
+	padding: 192px 0px 211px 0px;
+	align-items: center;
+	position: relative;
+}
+
+.subtitle {
+	font-weight: 700;
+	color: #D77474;
+	font-family: "Poppins", sans-serif;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+.info__block h4 {
+	margin-bottom: 12px;
+}
+
+.info__block h1 {
+	font-size: 48px;
+	font-weight: 700;
+	font-family: "Poppins", sans-serif;
+	color: black;
+	margin-bottom: 14px;
+	position: relative;
+	width: 65%;
+}
+
+.info__block span {
+	color: #AC1313;
+	font-family: Playfair Display;
+	font-size: 68px;
+	font-weight: 400;
+	position: absolute;
+	top:-30px ;
+	left:420px;
+
+}
+
+.info__block p {
+	font-size: 16px;
+	margin-bottom: 51px;
+}
+
+.info__visual img {
+	position: absolute;
+	left: 480px;
+	top: 120px;
+}
+
+.button__style{
+	color: white;
+	padding: 19px 31px 21px 40px;
+	background: #AC1313;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	font-size: 12px;
+	font-family: "Poppins", sans-serif;
 
 }
