--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -53,7 +53,7 @@ nav {
 nav a {
 	font-size: 12px;
 	font-weight: 400;
-	font-family: "Popins", sans-serif;
+	font-family: "Poppins", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	margin-right: 40px;
@@ -120,7 +120,6 @@ nav a:last-child {
 	font-family: "Poppins", sans-serif;
 	color: black;
 	margin-bottom: 14px;
-	position: relative;
 	width: 65%;
 }
 
@@ -129,9 +128,9 @@ nav a:last-child {
 	font-family: Playfair Display;
 	font-size: 68px;
 	font-weight: 400;
-	position: absolute;
-	top:-30px ;
-	left:420px;
+	position: relative;
+	top: -9px;
+	left: -7px;
 
 }
 
@@ -146,7 +145,7 @@ nav a:last-child {
 	top: 120px;
 }
 
-.button__style{
+.button__style {
 	color: white;
 	padding: 19px 31px 21px 40px;
 	background: #AC1313;
@@ -155,5 +154,107 @@ nav a:last-child {
 	font-weight: 700;
 	font-size: 12px;
 	font-family: "Poppins", sans-serif;
+}
 
+
+.complementary__titile {
+	font-size: 18px;
+	color: #DBDBDB;
+	font-family: 'Poppins', sans-serif;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-weight: 400;
+	transform: rotate(-90deg);
+	position: absolute;
+	bottom: -360px;
+	left: -20px;
+
+}
+
+.categorie__inner {
+	padding: 120px 0px 151px 0px;
+	position: relative;
+}
+
+
+.categorie__inner__header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 60px;
+}
+
+.categorie__inner__header h5 {
+	margin-bottom: 8px;
+}
+
+.categorie__inner__header h2 {
+	color: black;
+	font-family: Poppins, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	word-spacing: -5px;
+
+}
+
+
+.categorie__inner__header span {
+	color: #AC1313;
+	font-family: Playfair Display;
+	font-size: 68px;
+	font-weight: 400;
+	position: relative;
+	bottom: 10px;
+}
+
+
+.categorie__inner__visual {
+	display: flex;
+	justify-content: space-around;
+	margin-bottom: 90px;
+}
+
+
+.categorie__inner__visual__block {
+	position: relative;
+}
+
+
+
+.categorie__inner__visual__block__product {
+	position: absolute;
+	left: 85px;
+	bottom: 80px;
+}
+
+.categorie__inner__visual__block__product p {
+	text-align: center;
+	text-transform: uppercase;
+	font-family: 'Poppins', sans-serif;
+	letter-spacing: 2px;
+	color: white;
+}
+
+
+
+.categorie__inner__info {
+	display: flex;
+}
+
+.categorie__inner__info__block {
+	margin-right: 140px;
+}
+
+.categorie__inner__info__block:last-child {
+	margin-right: 0px;
+}
+
+.categorie__inner__info__block h3 {
+	color: black;
+	font-family: Poppins;
+	font-size: 29px;
+	font-weight: 700;
+	margin-bottom: 26px;
+	width: 62%;
+	line-height: 36px;
 }
