--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -157,17 +157,21 @@ nav a:last-child {
 }
 
 
-.complementary__titile {
+.categorie > p {
+	transform: rotate(-90deg);
+	position: absolute;
+	bottom: -360px;
+	left: -20px;
+
+}
+
+.complementary__title {
 	font-size: 18px;
 	color: #DBDBDB;
 	font-family: 'Poppins', sans-serif;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 400;
-	transform: rotate(-90deg);
-	position: absolute;
-	bottom: -360px;
-	left: -20px;
 
 }
 
@@ -261,32 +265,95 @@ nav a:last-child {
 
 
 
+.line {
+	width: 100%;
+	border-top:1px solid #F5F5F5;
+}
 
-
-.featured-product__inner__block{
-	display: flex;
-	align-items: center;
+.featured-product{
 	position: relative;
 }
 
-.featured-product__inner__block__visual img:first-child{
+
+.featured-product > p {
+	position:absolute;
+	transform: rotate(-90deg);
+	top:490px ;
+	right: -20px;
 }
 
-.featured-product__inner__block:last-child {
+.featured-product__inner{
+	padding:80px 0px 50px 0px;
+}
 
+
+
+.featured-product__inner__gold-black-pottery {
+	display: flex;
+	align-items: center;
+	position: relative;
+
+
+}
+
+
+.featured-product__inner__gold-black-pottery__visual {
+	margin: 0px 211px 0px 125px;
+
+}
+
+
+.featured-product__inner__gold-black-pottery__visual img:last-child {
+	position: absolute;
+	bottom: 145px;
+	left: 0px;
+	z-index: -1;
+}
+
+
+
+
+.featured-product__inner__orange-ceramic {
+	display: flex;
 	flex-direction: row-reverse;
+	align-items: center;
+	position: relative;
+
+}
+
+.featured-product__inner__orange-ceramic__visual {
+	margin: 0px 125px 0px 283px;
+}
+
+.featured-product__inner__orange-ceramic__visual img:last-child {
+	position: absolute;
+	bottom: 115px;
+	left: 600px;
+	z-index: -1;
 }
 
 
-.featured-product__inner__block__visual{
-	width: 30%;
-	background-image: url(./image/feature-product-vase-rectungle.png);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-position: 50%;
+.featured-product__inner__block__text {
+	width: 34%;
 }
 
-.featured-product__inner__block__text{
-	width: 20%;
+.featured-product__inner__block__text h4 {
+	color: black;
+	font-family: 'Poppins', sans-serif;
+	font-size: 24px;
+	font-weight: 700;
+	margin-bottom: 23px;
+
 }
 
+.featured-product__inner__block__text p {
+	line-height: 24px;
+	margin-bottom: 27px;
+}
+
+.featured-product__inner__block__text a {
+	color: black;
+	font-family: 'Poppins', sans-serif;
+	font-size: 14px;
+	font-weight: 700;
+}
