--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -469,7 +469,8 @@ nav a:last-child {
 
 
 .contact {
-	padding: 122px 0px 162px 0px
+	padding: 122px 0px 162px 0px;
+	position: relative;
 }
 
 .contact__inner {
@@ -508,18 +509,67 @@ nav a:last-child {
 	bottom: 10px;
 }
 
-
-.contact__info input:first-child {
-	padding: 13px 150px 12px 10px ;
+.contact__info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.contact__info button{
+.contact__info__mail input {
+	padding: 13px 150px 12px 10px;
+	margin-bottom: 42px;
+	margin-right: 4px;
+
+}
+
+.contact__info__mail button {
 	background-color: black;
-	padding: 15px 45px ;
-	color:white;
+	padding: 15px 45px;
+	color: white;
 	text-align: center;
 	font-weight: 14px;
 	font-weight: 400;
-	font-family: 'Lato',sans-serif;
+	font-family: 'Lato', sans-serif;
 	letter-spacing: 0.5px;
+}
+
+
+.contact__info__radio input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin-right: 10px;
+	width: 16px;
+	height: 16px;
+	border: 1px solid #8534FF;
+	transition: 0.2s all linear;
+	outline: none;
+
+}
+
+.contact__info__radio{
+	display: flex;
+	
+}
+
+.contact__info__radio input:checked {
+	background: #8534FF;
+}
+
+.contact__info__radio label {
+	color: #A1A1A1;
+	font-family: 'Lato',sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+}
+
+
+
+ .contact > p {
+	transform: rotate(-90deg);
+	position: absolute;
+	top:290px ;
+	right: 0px ;
+	font-size: 15px;
+
 }
