--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -547,9 +547,9 @@ nav a:last-child {
 
 }
 
-.contact__info__radio{
+.contact__info__radio {
 	display: flex;
-	
+
 }
 
 .contact__info__radio input:checked {
@@ -558,18 +558,86 @@ nav a:last-child {
 
 .contact__info__radio label {
 	color: #A1A1A1;
-	font-family: 'Lato',sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 }
 
 
 
- .contact > p {
+.contact > p {
 	transform: rotate(-90deg);
 	position: absolute;
-	top:290px ;
-	right: 0px ;
+	top: 290px;
+	right: 0px;
 	font-size: 15px;
+
+}
+
+
+
+.footer__inner {
+	display: flex;
+	flex-direction: column;
+	padding: 107px 0px 30px 0px;
+	align-items: center;
+}
+
+.footer__header {
+	margin-bottom: 70px;
+	width: 30%;
+}
+
+.footer__header h3 {
+	color: #000;
+	font-family: 'Pacifico', sans-serif;
+	font-size: 33px;
+	font-weight: 400;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.footer__header p {
+	color: #6C6C6C;
+	text-align: center;
+	font-family: 'Libre Franklin', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.footer__contacts {
+	display: flex;
+	margin-bottom: 90px;
+	gap: 138px;
+}
+
+
+.footer__contacts img {
+	display: block;
+	margin: 0px auto 10px auto;
+
+}
+
+.footer__contacts h6 {
+	margin-bottom: 20px;
+	color: #000;
+	text-align: center;
+	font-family: 'Poppins', sans-serif;
+	font-size: 13px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+.footer-contacts p {
+	color: #6C6C6C;
+	text-align: center;
+}
+
+
+.footer__copyright { 
+	
+	background-color: rgba(219, 219, 219, 0.10);
+	padding: 30px 0px ;
 
 }
