--- a/Pompeo/style.css
+++ b/Pompeo/style.css
@@ -574,6 +574,9 @@ nav a:last-child {
 
 }
 
+footer {
+	background: rgba(219, 219, 219, 0.10);
+}
 
 
 .footer__inner {
@@ -608,7 +611,13 @@ nav a:last-child {
 .footer__contacts {
 	display: flex;
 	margin-bottom: 90px;
-	gap: 138px;
+	gap: 200px;
+}
+
+
+.footer__contacts-card {
+	min-width: 200px;
+	text-align: center;
 }
 
 
@@ -635,9 +644,23 @@ nav a:last-child {
 }
 
 
-.footer__copyright { 
-	
+.footer__copyright {
+	text-align: center;
 	background-color: rgba(219, 219, 219, 0.10);
-	padding: 30px 0px ;
+	padding: 30px 0px;
+}
+
+.footer__copyright p {
+	font-size: 12px;
+	color: black;
+	font-weight: 400;
+	word-spacing: 4px;
+}
+
+
+.footer__copyright span {
+	color: #6C6C6C;
+	font-size: 12px;
+	font-weight: 400;
 
 }
