--- a/Oxygen - BEM/style.css
+++ b/Oxygen - BEM/style.css
@@ -129,7 +129,6 @@ legend {
 .container {
 	max-width: 1150px;
 	margin: 0 auto;
-	padding: 0px 15px
 }
 
 .header__top {
@@ -256,7 +255,7 @@ legend {
 	width: 60px;
 	height: 4px;
 	left: 0;
-	bottom:-8px;
+	bottom: -8px;
 }
 
 .decr {
@@ -318,7 +317,7 @@ legend {
 
 
 .features {
-	background-color:  #F6F8FA;
+	background-color: #F6F8FA;
 }
 
 .features__inner {
@@ -326,7 +325,7 @@ legend {
 }
 
 .features__content {
-	padding: 100px 0px 180px 0px;	
+	padding: 100px 0px 180px 0px;
 	margin: 0 auto;
 	width: 30%;
 }
@@ -335,3 +334,183 @@ legend {
 	margin-bottom: 85px;
 }
 
+
+.portfolio__inner {
+	padding: 139px 0px 0px 0px;
+}
+
+
+.portfolio__header {
+	display: flex;
+	margin-bottom: 122px;
+	gap: 324px
+}
+
+
+.portfolio__buttons {
+	display: flex;
+	gap: 45px
+}
+
+.portfolio__btn {
+	position: relative;
+	color: #333;
+	text-align: right;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+	font-weight: 600;
+	letter-spacing: 2px;
+}
+
+
+.portfolio__btn::after {
+	position: absolute;
+	content: "";
+	background-color: #FCBB08;
+	width: 0;
+	height: 2px;
+	left: -1px;
+	bottom: 14px;
+	transition: width 0.3s ease-out;
+}
+
+.portfolio__btn:hover::after {
+	width: 100%
+}
+
+
+.portfolio__items {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	justify-content: center;
+	gap: 22px;
+}
+
+
+.portfolio__items-img {
+	background-color: #EDEDED;
+	height: 288px;
+	border: 12px solid transparent;
+	transition: all 0.4s linear;
+	position: relative;
+}
+
+.portfolio__items-img:hover {
+	background-color: rgba(76, 73, 73, 1);
+	border: 12px solid rgba(102, 99, 99, 1)
+}
+
+.portfolio__items-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+
+.portfolio__title {
+	color: rgba(237, 237, 237, 1);
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	letter-spacing: 1.4px;
+}
+
+.portfolio__decr {
+	color: rgba(237, 237, 237, 1);
+	text-align: center;
+	font-family: 'Open Sans';
+	font-size: 12px;
+	font-weight: 300;
+	letter-spacing: 1px;
+}
+
+.portfolio__btn-all {
+	margin-top: 72px;
+	width: 100%;
+	padding: 42px;
+	color: #242121;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
+	font-weight: 700;
+	letter-spacing: 1.2px;
+	background: #F6F8FA;
+
+}
+
+.video {
+	padding-top: 130px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-style: italic;
+	font-family: 'Merriweather', sans-serif;
+	font-weight: 300;
+	align-items: center;
+}
+
+.video__quotes {
+	color: #242121;
+	text-align: center;
+	font-size: 18px;
+	line-height: 36px;
+	width: 45%;
+	margin-bottom: 51px;
+}
+
+.video__quotes-author {
+	color: #9E9E9E;
+	text-align: center;
+	font-size: 14px;
+	line-height: 32px;
+	margin-bottom: 150px;
+}
+
+.video__content {
+	background-image: url(/image/video-img.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	min-width: 100%;
+	height: 324px;
+	position: relative;
+}
+
+.video__content::after {
+	content: "";
+	background-image: url(/image/video-img-play.svg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	width: 55px;
+	height: 65px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+
+.statistics__inner {
+	padding: 164px 0px 194px 0px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+
+.statistics__item-num {
+	display: block;
+	color: #242121;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 60px;
+	font-weight: 700;
+	margin-bottom: 9px;
+}
+
+.statistics__item-text {
+	color: #00B2A0;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+}
