--- a/Oxygen - BEM/style.css
+++ b/Oxygen - BEM/style.css
@@ -728,20 +728,77 @@ legend {
 }
 
 
-.footer__content { 
+.footer__content {
+	padding: 110px 0px 60px 0px;
 	background: #373A39;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.footer__logo{
+.footer__logo {
 	position: relative;
+	margin-bottom: 98px;
+
 }
 
-.footer__logo::after{ 
+.footer__logo::after {
 	content: '';
 	background-color: rgba(252, 187, 8, 1);
 	position: absolute;
 	width: 150px;
 	height: 2px;
-	top:0px;
-	left:0px;
+	top: 66px;
+	left: -50px;
+}
+
+
+.footer__links {
+	margin-bottom: 65px;
+}
+
+.footer__link {
+	color: #FFF;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 12px;
+	font-weight: 300;
+	letter-spacing: 4px;
+
+}
+
+.footer__link:not(:last-child) {
+	margin-right: 31px;
+}
+
+.footer__contacts {
+	display: flex;
+	flex-direction: column;
+	color: #A8A8A8;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 32px;
+	margin-bottom: 57px;
+}
+
+.footer__phone,
+.footer__mail {
+	color: #A8A8A8;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 32px;
+}
+
+
+.footer__copy {
+	background-color: #2A2C2B;
+	padding: 43px 0px 41px 0px;
+	color: #CCC;
+	text-align: center;
+	font-family: 'Open Sans',sans-serif;
+	font-size: 12px;
+	font-weight: 400;
 }
