--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -284,6 +284,7 @@ h5,
 h6 {
 	font-weight: 700;
 	text-transform: uppercase;
+	color: var(--color-light)
 }
 
 
@@ -568,9 +569,47 @@ h6 {
 	margin-bottom: 37px;
 }
 
+.training-types {
+	position: relative;
+	max-width: 1920px;
+	margin-inline: auto;
+	padding-top: 70px;
+	padding-bottom: 120px;
+	background-color: var(--color-dark);
+
+}
+
+.training-types-list {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	gap: 60px;
+	row-gap: 32px;
+}
+
+.training-types-item-title {
+	font-size: 16px;
+}
+
+.training-types-item {
+	--trainingTypesItemBgIconSize: 80px;
+	padding-top: var(--trainingTypesItemBgIconSize);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background: url(./icons/transparant-arrow-down-left.svg) 100% 0/var(--trainingTypesItemBgIconSize) no-repeat;
+}
+
+
+
 @media (max-width:1919px) {
 	.motivation-card-image {
 		margin-block: -20px;
+	}
+}
+
+@media (max-width:1280px) {
+	.training-types-list {
+		grid-template-columns: repeat(3, 1fr);
 	}
 }
 
@@ -657,5 +696,21 @@ h6 {
 
 	.motivation-card-description:not(:last-child) {
 		margin-bottom: 20px;
+	}
+
+	.training-types-list {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 30px;
+	}
+
+	.training-types-item {
+		--trainingTypesItemBgIconSize: 50px;
+		row-gap: 10px;
+	}
+
+
+	.training-types-image {
+		max-width: 120px;
+
 	}
 }
