section join-us done

--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -275,6 +275,10 @@ p:not([class]):not(:last-child) {
 	color: var(--color-light)
 }
 
+.title-big {
+	font-size: clamp(24px, 3.12vw, 60px);
+}
+
 /* реализация заголовков  */
 h1,
 h2,
@@ -320,6 +324,7 @@ h6 {
 	padding-right: 80px;
 	background-color: transparent;
 	border: var(--border);
+	color: var(--color-light);
 }
 
 
@@ -337,6 +342,33 @@ h6 {
 .button.transparent:hover {
 	color: var(--color-dark);
 	background-color: var(--color-light-gray);
+}
+
+
+.input {
+	height: var(--input-height);
+	padding-inline: 25px;
+	width: 100%;
+	background-color: transparent;
+	color: var(--color-light);
+	border: 1px solid var(--color-light-gray);
+	border-radius: var(--border-radius);
+}
+
+
+.input::placeholder {
+	color: var(--color-light-gray);
+}
+
+
+.input:hover {
+	border-color: var(--color-light);
+}
+
+.input:focus {
+	color: var(--color-dark);
+	background-color: var(--color-light-gray);
+	outline: none;
 }
 
 
@@ -556,6 +588,13 @@ h6 {
 	text-stroke: 1px var(--color-light-gray);
 }
 
+
+.backdrop-title.centered::after {
+	top: -0.55em;
+	left: 50%;
+	translate: -50% 0;
+}
+
 .motivation-card-description {
 	max-width: 400px;
 	margin-bottom: 37px;
@@ -598,6 +637,122 @@ h6 {
 	align-items: center;
 	background: url(./icons/transparant-arrow-down-left.svg) 100% 0/var(--trainingTypesItemBgIconSize) no-repeat;
 }
+
+
+.join-us-video-wrapper {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 150px 30px;
+	background: url(./image/join-us-bg.jpg) center/cover no-repeat var(--color-dark-alternate);
+}
+
+.join-us-video {
+	width: 100%;
+	max-width: 960px;
+	height: auto;
+}
+
+.join-us-video-play-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	row-gap: 4px;
+	width: 200px;
+	aspect-ratio: 1;
+	background-color: transparent;
+	border-radius: 50%;
+	border: var(--border);
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: var(--color-light);
+}
+
+
+.join-us-video-play-button::after {
+	content: "";
+	width: 26px;
+	aspect-ratio: 1;
+	background: url(./icons/arrow-top-right.svg) center/contain no-repeat;
+	transition: var(--transition-duration);
+}
+
+.join-us-video-play-button:hover {
+	color: var(--color-dark);
+	background-color: var(--color-light-gray);
+}
+
+.join-us-video-play-button:hover:after {
+	filter: invert(1);
+}
+
+
+.join-us-body {
+	padding-bottom: 150px;
+}
+
+.join-us-title {
+	position: relative;
+	font-size: clamp(64px, 9.37vw, 180px);
+	line-height: 1;
+	text-align: center;
+	margin-top: -0.4em;
+}
+
+
+.join-us-title::after {
+	content: "";
+	display: inline-block;
+	width: 0.7em;
+	aspect-ratio: 1;
+	background: url(./icons/bold-arrow-down-right.svg) center/contain no-repeat;
+	margin-left: 0.14em;
+	/* transform: rotate(-90deg); */
+	scale: 1 -1;
+}
+
+
+.join-us-title:not(:last-child) {
+	margin-bottom: 130px;
+}
+
+.join-us-form-header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 7px;
+}
+
+.join-us-form-header:not(:last-child) {
+	margin-bottom: 52px;
+}
+
+.join-us-form-subtitle {
+	font-size: 20px;
+	text-transform: uppercase;
+	line-height: 1.65;
+	color: var(--color-light);
+	text-align: center;
+}
+
+.join-us-form-body {
+	display: flex;
+	justify-content: center;
+	column-gap: 20px;
+}
+
+
+.join-us-form-input {
+	max-width: 400px;
+}
+
+
 
 
 
@@ -648,6 +803,13 @@ h6 {
 		height: auto;
 	}
 
+	.join-us-body {
+		padding-bottom: 80px;
+	}
+
+	.join-us-title:not(:last-child) {
+		margin-bottom: 80px;
+	}
 }
 
 @media (max-width:767px) {
@@ -712,5 +874,24 @@ h6 {
 	.training-types-image {
 		max-width: 120px;
 
+	}
+
+
+	.join-us-video-play-button {
+		width: 140px;
+	}
+
+	.join-us-title:not(:last-child) {
+		margin-bottom: 40px;
+	}
+
+	.join-us-form-subtitle {
+		font-size: 16px;
+	}
+
+	.join-us-form-body {
+		flex-direction: column;
+		align-items: center;
+		row-gap: 20px;
 	}
 }
