--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -253,6 +253,11 @@ p:not([class]):not(:last-child) {
 	padding-inline: var(--container-padding-x);
 }
 
+.container-wide {
+	max-width: 1920px;
+	margin-inline: auto;
+}
+
 
 .visually-hidden {
 	position: absolute !important;
@@ -579,18 +584,19 @@ h6 {
 	content: attr(data-title);
 	position: absolute;
 	z-index: -1;
-	top: -0.45em;
+	top: -0.3em;
 	left: -0.6em;
 	font-size: 2.8em;
 	font-family: var(--font-family-accent);
 	color: transparent;
-	-webkit-text-stroke: 1px var(--color-light-gray);
+	line-height: 1;
+	-webkit-text-stroke: 1px var(--color-dark-gray);
 	text-stroke: 1px var(--color-light-gray);
 }
 
 
 .backdrop-title.centered::after {
-	top: -0.55em;
+	top: -0.25em;
 	left: 50%;
 	translate: -50% 0;
 }
@@ -607,6 +613,9 @@ h6 {
 .motivation-card-description:not(:last-child) {
 	margin-bottom: 37px;
 }
+
+
+
 
 .training-types {
 	position: relative;
@@ -636,6 +645,10 @@ h6 {
 	flex-direction: column;
 	align-items: center;
 	background: url(./icons/transparant-arrow-down-left.svg) 100% 0/var(--trainingTypesItemBgIconSize) no-repeat;
+}
+
+.join-us {
+	background-color: var(--color-dark-alternate);
 }
 
 
@@ -752,6 +765,44 @@ h6 {
 	max-width: 400px;
 }
 
+.location {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.location-body {
+	padding: 80px 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.location-map-image {
+	height: auto;
+}
+
+
+.location-title:not(:last-child) {
+	margin-bottom: 14px;
+}
+
+.location-description {
+	max-width: 490px;
+}
+
+
+.location-description:not(:last-child) {
+	margin-bottom: 37px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -809,6 +860,11 @@ h6 {
 
 	.join-us-title:not(:last-child) {
 		margin-bottom: 80px;
+	}
+
+	.location {
+		display: flex;
+		flex-direction: column-reverse;
 	}
 }
 
@@ -893,5 +949,14 @@ h6 {
 		flex-direction: column;
 		align-items: center;
 		row-gap: 20px;
+	}
+
+
+	.locatio-body {
+		padding-block: 40px
+	}
+
+	.location-description:not(:last-child) {
+		margin-bottom: 20px;
 	}
 }
