--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -746,7 +746,7 @@ h6 {
 	margin-bottom: 52px;
 }
 
-.join-us-form-subtitle {
+.section-description {
 	font-size: 20px;
 	text-transform: uppercase;
 	line-height: 1.65;
@@ -795,6 +795,34 @@ h6 {
 
 .location-description:not(:last-child) {
 	margin-bottom: 37px;
+}
+
+
+.family {
+	background-color: var(--color-dark-alternate)
+}
+
+.family-header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 132px;
+	padding-bottom: 62px;
+	text-align: center;
+	row-gap: 7px;
+}
+
+
+.family-body {
+	display: flex;
+	justify-content: center;
+	column-gap: 26px;
+	scroll-snap-type: x mandatory;
+	overflow-x: scroll;
+}
+
+.family-image {
+	scroll-snap-align: start;
 }
 
 
@@ -865,6 +893,10 @@ h6 {
 	.location {
 		display: flex;
 		flex-direction: column-reverse;
+	}
+
+	.family-image {
+		height: 360px;
 	}
 }
 
@@ -941,7 +973,7 @@ h6 {
 		margin-bottom: 40px;
 	}
 
-	.join-us-form-subtitle {
+	.section-description {
 		font-size: 16px;
 	}
 
@@ -958,5 +990,20 @@ h6 {
 
 	.location-description:not(:last-child) {
 		margin-bottom: 20px;
+	}
+
+
+	.family-header {
+		padding-top: 80px;
+		padding-bottom: 50px
+	}
+
+
+	.family-body {
+		column-gap: 12px;
+	}
+
+	.family-image {
+		height: 180px;
 	}
 }
