--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -361,7 +361,8 @@ h6 {
 }
 
 
-.input::placeholder {
+.input::placeholder,
+select.input:invalid {
 	color: var(--color-light-gray);
 }
 
@@ -374,6 +375,19 @@ h6 {
 	color: var(--color-dark);
 	background-color: var(--color-light-gray);
 	outline: none;
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+	-moz-appearance: textfield;
 }
 
 
@@ -815,7 +829,6 @@ h6 {
 
 .family-body {
 	display: flex;
-	justify-content: center;
 	column-gap: 26px;
 	scroll-snap-type: x mandatory;
 	overflow-x: scroll;
@@ -825,8 +838,130 @@ h6 {
 	scroll-snap-align: start;
 }
 
+.calculate {
+	background-color: var(--color-dark-alternate);
+	padding-block: 146px;
+}
+
+.calculate-inner {
+	display: flex;
+	align-items: center;
+	column-gap: 36px;
+}
+
+.calculate-body {
+	max-width: 627px;
+	flex-grow: 1;
+}
+
+.calculate-title:not(:last-child) {
+	margin-bottom: 16px;
+}
+
+.calculate-description {
+	max-width: 385px;
+}
+
+.calculate-description:not(:last-child) {
+	margin-bottom: 30px;
+}
+
+.calculate-form-body {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 18px 30px;
+}
+
+.calculate-form-body:not(:last-child) {
+	margin-bottom: 26px;
+}
 
 
+.calculate-input.wide {
+	grid-column: -1/1;
+}
+
+.calculate-table-wrapper {
+	position: relative;
+	width: 100%;
+	max-width: 610px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.calculate-table-wrapper::before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	width: 100%;
+	aspect-ratio: 1;
+	background-color: var(--color-dark);
+	border-radius: 50%;
+}
+
+
+.calculate-table {
+	position: relative;
+	border-collapse: collapse;
+}
+
+
+.calculate-table :is(td, th) {
+	padding-right: 30px;
+}
+
+
+
+.calculate-table :is(td, th):not(:first-child) {
+	padding-left: 30px;
+}
+
+.calculate-table :is(td, th):not(:last-child) {
+	border-right: 1px solid var(--color-dark-gray);
+}
+
+.calculate-table tbody td {
+	border-top: 1px solid var(--color-dark-gray);
+}
+
+
+.calculate-table tbody tr:last-child td:first-child {
+	position: relative;
+}
+
+.calculate-table tbody tr:last-child td:first-child::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 70%;
+	height: 1px;
+	background-color: var(--color-dark-gray);
+
+}
+
+.calculate-table th {
+	padding-block: 20px;
+	text-align: left;
+	text-transform: uppercase;
+	color: var(--color-light)
+}
+
+.calculate-table td {
+	padding-block: 14px;
+}
+
+.calculate-table tfoot {
+	color: var(--color-light)
+}
+
+.calculate-table tfoot td {
+	padding-top: 33px;
+	padding-bottom: 0px;
+}
 
 
 
@@ -897,6 +1032,30 @@ h6 {
 
 	.family-image {
 		height: 360px;
+	}
+
+	.calculate {
+		padding-block: 100px;
+	}
+
+	.calculate-form-body {
+		grid-template-columns: 1fr;
+	}
+
+	.calculate-button {
+		width: 100%;
+	}
+
+	.calculate-inner {
+		column-gap: 20px;
+	}
+
+	.calculate-table :is(td, th) {
+		padding-block: 10px;
+	}
+
+	.calculate-table tfoot td {
+		padding-top: 10px;
 	}
 }
 
@@ -1005,5 +1164,18 @@ h6 {
 
 	.family-image {
 		height: 180px;
+	}
+
+	.calculate {
+		padding-block: 60px;
+	}
+
+	.calculate-inner {
+		flex-direction: column;
+		row-gap: 30px;
+	}
+
+	.calculate-table-wrapper::before {
+		display: none;
 	}
 }
