--- a/Kroop/style.css
+++ b/Kroop/style.css
@@ -221,6 +221,14 @@ body {
 	line-height: 1.75;
 }
 
+svg * [fill] {
+	fill: currentColor
+}
+
+svg * [stroke] {
+	stroke: currentColor
+}
+
 
 a,
 input,
@@ -228,6 +236,11 @@ textarea,
 button,
 svg * {
 	transition-duration: var(--transition-duration);
+}
+
+
+svg * {
+	transition-property: fill, stroke;
 }
 
 a {
@@ -963,11 +976,125 @@ input[type=number] {
 	padding-bottom: 0px;
 }
 
+.footer {
+	--footerLogoWidth: 20.77%;
+}
+
+.footer-main {
+	padding-top: 140px;
+	padding-bottom: 160px;
+}
+
+.footer-header,
+.footer-body {
+	display: grid;
+	column-gap: 62px;
+}
+
+.footer-header {
+	grid-template-columns: var(--footerLogoWidth) auto;
+}
+
+
+.footer-header:not(:last-child) {
+	margin-bottom: 60px;
+}
+
+.footer-logo-img {
+	height: auto;
+}
+
+.footer-description {
+	text-align: left;
+}
+
+.footer-body {
+	grid-template-columns: var(--footerLogoWidth) repeat(3, 1fr);
+}
+
+.footer-column-title {
+	font-size: clamp(18px, 1.15vw, 22px);
+}
+
+
+.footer-column-title:not(:last-child) {
+	margin-bottom: 15px;
+}
+
+.footer-schedule:not(:last-child) {
+	margin-bottom: 13px;
+}
+
+.footer-address {
+	font-style: normal;
+}
+
+.footer-address:not(:last-child) {
+	margin-bottom: 35px;
+}
+
+
+.footer-column-title.has-arrow::after {
+	content: "";
+	display: inline-block;
+	width: 0.74em;
+	aspect-ratio: 1;
+	background: url(./icons/bold-arrow-down-right.svg) center/contain no-repeat;
+	margin-left: 0.5em;
+	/* transform: rotate(-90deg); */
+	scale: -1 1;
+}
+
+.footer-subscribe {
+	position: relative;
+}
+
+.footer-subscribe:not(:last-child) {
+	margin-bottom: 50px;
+}
+
+
+.footer-subscribe-input {
+	padding-right: 70px;
+}
+
+.footer-subscribe-button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	aspect-ratio: 1;
+	background: url(./icons/arrow-top-right.svg) center / 70% no-repeat;
+	border: var(--border);
+	border-radius: 50%;
+}
+
+.footer-subscribe-button:hover {
+	background-color: var(--color-light-gray);
+}
 
 
 
+.footer-soc1als-list {
+	display: flex;
+	column-gap: 19px;
+}
 
 
+.footer-soc1als-link {
+	display: flex;
+	width: 23px;
+}
+
+.footer-extra {
+	padding-block: 15px;
+	background-color: var(--color-dark-alternate);
+}
+
+
+.footer-copyright {
+	font-size: 14px;
+}
 
 
 @media (max-width:1919px) {
@@ -1056,6 +1183,23 @@ input[type=number] {
 
 	.calculate-table tfoot td {
 		padding-top: 10px;
+	}
+
+	.footer-main {
+		padding-top: 80px;
+		padding-bottom: 50px;
+	}
+
+	.footer-header {
+		display: flex;
+		flex-direction: column;
+		row-gap: 30px;
+	}
+
+
+	.footer-body {
+		grid-template-columns: repeat(2, 1fr);
+		row-gap: 30px;
 	}
 }
 
@@ -1177,5 +1321,25 @@ input[type=number] {
 
 	.calculate-table-wrapper::before {
 		display: none;
+	}
+
+
+	.footer-main {
+		padding-top: 50px;
+	}
+
+	.footer-header:not(:last-child) {
+		margin-bottom: 30px;
+	}
+
+
+	.footer-body {
+		grid-template-columns: 1fr;
+	}
+
+
+	.footer-subscribe:not(:last-child) {
+		margin-bottom: 40px;
+
 	}
 }
