--- a/Massage/style.css
+++ b/Massage/style.css
@@ -218,7 +218,7 @@ svg * {
 }
 
 
-.body {
+body {
 	font-family: 'Stem', sans-serif;
 	background-color: var(--color-white);
 	color: var(--color-black);
@@ -257,15 +257,9 @@ svg * {
 
 .button {
 	display: inline-flex;
-	height: 44px;
 	align-items: center;
-	padding-inline: 24px;
-	font-size: 15px;
 	text-decoration: none;
-	font-weight: 500;
 }
-
-
 
 .header {
 	display: flex;
@@ -332,7 +326,69 @@ svg * {
 	row-gap: 4px;
 	color: var(--color-green);
 	background-color: var(--color-white);
+	padding-inline: 24px;
+	font-weight: 500;
+	font-size: 15px;
 	border: none;
 	border-radius: 10px;
+}
 
+.header-call-button:hover {
+	background-color: rgb(1, 143, 1);
+	color: greenyellow;
+}
+
+
+@media (max-width:1280px) {
+	.header-menu-link {
+		font-size: 0.9em;
+	}
+
+	.header-description-number {
+		font-size: 0.9rem;
+	}
+}
+
+
+
+@media (max-width:1024px) {
+	.header {
+		flex-wrap: wrap;
+		padding-top: 20px;
+		row-gap: 10px;
+		padding-inline: 15px;
+
+	}
+
+
+	.header-menu {
+		order: 1;
+		flex-basis: 100%;
+	}
+
+
+	.header-menu-link {
+		height: 50px;
+	}
+}
+
+
+@media (max-width:767px) {
+	.header {
+		padding-top: 15px;
+		column-gap: 10px;
+	}
+
+	.header-actions {
+		column-gap: 15px;
+	}
+
+
+	.header-menu-link {
+		height: 32px;
+	}
+
+	.header-call-button {
+		padding-inline: 15px;
+	}
 }
