--- a/Massage/style.css
+++ b/Massage/style.css
@@ -182,6 +182,18 @@ svg * {
 }
 
 
+
+
+h1,
+h2 {
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 1.1;
+}
+
+h3 {}
+
+
 /**
   Удаляем все анимации и переходы для людей,
   которые предпочитают их не использовать
@@ -204,6 +216,7 @@ svg * {
 	--color-black-atlernate: #333333;
 	--color-dark-white: rgba(255, 255, 255, 0.7);
 	--color-light-dark: rgba(0, 0, 0, 0.4);
+	--color-light-dark-2: rgba(0, 0, 0, 0.7);
 
 	--font-family-base: 'Stem', sans-serif;
 	--font-family-accent: 'Inter', sans-serif;
@@ -241,6 +254,20 @@ svg * {
 }
 
 
+.container-wide {
+	max-width: 1440px;
+	margin-inline: auto;
+}
+
+
+.description {
+	font-weight: 500;
+	color: var(--color-light-dark-2);
+	line-height: 1.33;
+	font-size: 24px;
+}
+
+
 .visually-hidden {
 	position: absolute !important;
 	width: 1px !important;
@@ -260,6 +287,26 @@ svg * {
 	align-items: center;
 	text-decoration: none;
 }
+
+.button-aletenative {
+	padding: 16px 32px;
+	background-color: var(--color-green);
+	color: var(--color-white);
+	border: none;
+	font-weight: 700;
+	border-radius: 40px;
+	font-family: var(--font-family-accent);
+}
+
+
+.button-aletenative:hover {
+	background-color: var(--color-white);
+	color: var(--color-green);
+	border: 1px dashed var(--color-green);
+}
+
+
+
 
 .header {
 	display: flex;
@@ -337,6 +384,85 @@ svg * {
 	background-color: rgb(1, 143, 1);
 	color: greenyellow;
 }
+
+
+.banner {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	column-gap: clamp(30px, 10.42vw, 200px);
+	;
+}
+
+
+.banner-image {
+	height: auto;
+	width: 100%;
+}
+
+
+.banner-body {
+	padding: 80px 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+	max-width: 445px;
+	row-gap: 24px;
+}
+
+
+.banner-title {
+	font-family: var(--font-family-accent);
+}
+
+
+.banner-description {
+	font-family: var(--font-family-accent);
+}
+
+
+.banner-description:not(:last-child) {
+	margin-bottom: 16px;
+}
+
+
+.banner-button {
+	column-gap: 10px;
+}
+
+
+.button-aletenative:hover .banner-button::after {
+	background-color: ;
+}
+
+.banner-button::after {
+	content: '';
+	background: url(./icons/arrow-right.svg) center/contain no-repeat;
+	width: 17px;
+	aspect-ratio: 1;
+}
+
+
+.banner-discount {
+	font-size: 15px;
+	font-style: 500px;
+	font-family: var(--font-family-accent);
+	color: var(--color-light-dark);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width:1280px) {
