--- a/Massage/style.css
+++ b/Massage/style.css
@@ -187,7 +187,7 @@ svg * {
 h1,
 h2 {
 	font-weight: 700;
-	font-size: 64px;
+	font-size: clamp(20px, 4vw, 64px);
 	line-height: 1.1;
 }
 
@@ -264,7 +264,7 @@ svg * {
 	font-weight: 500;
 	color: var(--color-light-dark-2);
 	line-height: 1.33;
-	font-size: 24px;
+	font-size: clamp(16px, 1.56vw, 24px);
 }
 
 
@@ -389,8 +389,10 @@ svg * {
 .banner {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	column-gap: clamp(30px, 10.42vw, 200px);
-	;
+	align-items: center;
+	justify-content: center;
+	column-gap: clamp(20px, 8.68vw, 125px);
+	min-height: calc(100vh - var(--header-height));
 }
 
 
@@ -431,9 +433,6 @@ svg * {
 }
 
 
-.button-aletenative:hover .banner-button::after {
-	background-color: ;
-}
 
 .banner-button::after {
 	content: '';
@@ -496,6 +495,17 @@ svg * {
 	.header-menu-link {
 		height: 50px;
 	}
+
+	.banner-body {
+		row-gap: 12px;
+		padding-top: 40px;
+	}
+
+	.banner-button {
+		font-size: 15px;
+	}
+
+
 }
 
 
@@ -511,10 +521,32 @@ svg * {
 
 
 	.header-menu-link {
-		height: 32px;
+		height: 36px;
 	}
 
 	.header-call-button {
 		padding-inline: 15px;
 	}
+
+	.banner {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.banner-body {
+		column-gap: 10px;
+		padding-top: 30px;
+	}
+
+	.banner-image {
+		padding-top: 30px;
+		width: 50%;
+		height: auto;
+	}
+
+	.banner-description:not(:last-child) {
+		margin-bottom: 5px;
+	}
+
 }
