--- a/Massage/style.css
+++ b/Massage/style.css
@@ -227,6 +227,7 @@ h4 {
 	--color-dark-white: rgba(255, 255, 255, 0.7);
 	--color-light-dark: rgba(0, 0, 0, 0.4);
 	--color-light-dark-2: rgba(0, 0, 0, 0.7);
+	--color-gray: #FAFAFA;
 
 	--font-family-base: 'Stem', sans-serif;
 	--font-family-accent: 'Inter', sans-serif;
@@ -532,9 +533,6 @@ svg * {
 	row-gap: 32px;
 }
 
-
-
-
 .aboutus-image {
 	margin-top: -30px;
 	order: 2;
@@ -554,6 +552,71 @@ svg * {
 .aboutus-description {
 	font-size: clamp(15px, 1.25vw, 18px);
 }
+
+.services {
+	background-color: var(--color-gray);
+	padding-block: clamp(50px, 8.33vw, 120px);
+}
+
+.services-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	row-gap: clamp(20px, 4.44vw, 64px);
+}
+
+.services-header {
+	display: flex;
+	flex-direction: column;
+	row-gap: clamp(15px, 1.66vw, 24px);
+	text-align: center;
+	max-width: 720px;
+}
+
+.services-heading {
+	font-size: clamp(18px, 1.94vw, 28);
+}
+
+.services-description {
+	color: var(--color-black);
+}
+
+
+.services-list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: clamp(15px, 2.03vw, 30px);
+	justify-content: center;
+}
+
+.services-item {
+	display: inline-block;
+	position: relative;
+	width: clamp(280px, 24.03vw, 350px);
+	height: auto;
+}
+
+.services-image {
+	width: clamp(280px, 24.03vw, 350px);
+	height: auto;
+}
+
+
+
+
+
+.services-item-title {
+	min-width: 286px;
+	top: 82%;
+	left: 50%;
+	text-align: center;
+	transform: translateX(-50%);
+	position: absolute;
+}
+
+
+
 
 
 
@@ -649,6 +712,8 @@ svg * {
 	}
 
 
+
+
 }
 
 
@@ -679,7 +744,7 @@ svg * {
 	}
 
 	.button-aletenative {
-		padding: 10px 24px;
+		padding: 10px 24dpx;
 	}
 
 	.banner-body,
