--- a/Massage/style.css
+++ b/Massage/style.css
@@ -166,11 +166,11 @@ body {
 /**
   Приводим к единому цвету svg-элементы
  */
-svg *[fill] {
+svg * [fill] {
 	fill: currentColor
 }
 
-svg *[stroke] {
+svg * [stroke] {
 	stroke: currentColor
 }
 
@@ -256,6 +256,14 @@ textarea,
 button,
 svg * {
 	transition-duration: var(--transition-duration);
+}
+
+a {
+	color: var(--color-white);
+}
+
+a:hover {
+	color: var(--color-gray);
 }
 
 .is-brighter {
@@ -867,6 +875,74 @@ svg * {
 
 
 
+.footer {
+	padding-block: clamp(40px, 5.5vw, 80px);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: clamp(20px, 2.77vw, 40px);
+}
+
+
+.footer-soc1als-list {
+	display: flex;
+	column-gap: 10px;
+}
+
+
+.footer-soc1als-item {
+	display: flex;
+	background-color: var(--color-green);
+	border-radius: 50%;
+	transition-duration: 0.2s;
+}
+
+.footer-soc1als-link:hover {
+	margin-top: -7px;
+}
+
+.footer-soc1als-link {
+	display: flex;
+	padding: clamp(11px, 1.1vw, 16px);
+}
+
+
+.footer-list {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 40px;
+}
+
+
+.footer-link {
+	font-size: clamp(15px, 1.25vw, 18px);
+	text-decoration: none;
+	color: var(--color-light-dark-2);
+}
+
+.footer-link:hover {
+	color: var(--color-black-atlernate)
+}
+
+
+
+
+.footer-copyright {
+	font-size: 15px;
+	font-weight: 700;
+	color: var(--color-light-dark-2);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1071,5 +1147,9 @@ svg * {
 @media (max-width: 460px) {
 	.regalia-list {
 		grid-template-columns: 1fr;
+	}
+
+	.footer-list {
+		gap: 15px;
 	}
 }
